# opengl-playground

./: CMakeLists.txt
src/: main.cpp
